[package]
name = "rkyv-with"
description = "Third-party derive macro for rkyv's *With traits"
version = "0.1.2"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/MaxOhn/rkyv-with"
keywords = ["rkyv", "with", "remote"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
rkyv = "0.7"